recursion.lessons.recursion.dragoncurve.DragonCurve1.scala.error
DragonCurve1:7: error: illegal start of simple expression
		val v = 
                ^